# caveman

./: .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE.original.md  CODEBUDDY.md  COMPARISON.md  CONTRIBUTING.md  GEMINI.md  INSTALL.md  LICENSE  POWER.md  PROPOSED_CAVEMAN_UPDATES.md  README.md  README.zh-CN.md  README_CAVEMAN.md  README_ES.md  README_FR.md  README_IT.md  README_RU.md  README_ZH.md  SECURITY.md  __init__.py  caveman.skill  commit_msg.txt  flake.nix  frynetworks-redesign.html  gemini-extension.json  install-codex-plugin.command  install.ps1  install.sh  layman.skill  package-lock.json  package.json  plugin.yaml  renovate.json  setup.py  skills-lock.json
.claude-plugin/: marketplace.json  plugin.json
.clinerules/: caveman.md
.codebuddy-plugin/: marketplace.json  plugin.json
.codex/: hooks.json  settings.json
.codex-plugin/: plugin.json
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml
.serena/: project.yml
agents/: cavecrew-builder.md  cavecrew-investigator-deep.md  cavecrew-investigator.md  cavecrew-reviewer.md  missioncrew-builder.md  missioncrew-reviewer.md
benchmarks/: prompts.json  requirements.txt  run.py  run_deepseek.py
caveman/: SKILL.md
caveman-compress/: README.md  SECURITY.md  SKILL.md  pyproject.toml
caveman-compress/scripts/: benchmark.py  cli.py  compress.py  detect.py  validate.py
cli/: install.js
commands/: caveman-commit.toml  caveman-error.toml  caveman-init.toml  caveman-pipe.ps1  caveman-pipe.sh  caveman-review.toml  caveman-stats.toml  caveman.md  caveman.toml  (+7 more)
(+453 files in other folders)
